--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* aos */
+@import 'aos/dist/aos.css';
+
 /* google font */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&family=Poppins:wght@400;500&display=swap');
 /* font-family: 'Nunito Sans', sans-serif; */
