--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,16 @@
 /* font-family: 'Nunito Sans', sans-serif; */
 /* font-family: 'Poppins', sans-serif; */
 
+html{
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #f9fcff;
-  background-image: linear-gradient(340deg, #dee4ea 0%, #f9fcff 74%);
+  background-image: linear-gradient(90deg, #f9fcff 0%, #dee4ea 74%);
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
